<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Jiptoo App</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="fruit_banana">Banana</string>
    <string name="fruit_apple">Apple</string>
    <string name="fruit_orange">Orange</string>
    <string name="btn_check_fruit"><u>Check Fruit</u></string>
    <string name="alert_title_picked_fruits">Picked Fruits</string>

    <string name="format_msg_picked_fruits">Fruits you picked : <b><xliff:g id="picked_fruits">%1$s</xliff:g></b></string>
    <string name="gender_male">Gentleman</string>
    <string name="gender_female">Lady</string>
    <string name="lbl_guest_room_light">Guest room light</string>
</resources>